# Human

./: .gitignore  README.md  __init__.py  pyproject.toml
action/: context.py  contracts.py  executor.py  registry.py  tools.py
api/: app.py  routes.py  schemas.py
engines/: conflict.py  consequence.py  hypothesis.py
frontend/: package-lock.json  package.json
memory/: consolidation.py  self_history.py  system.py
modules/: associative.py  discrepancy.py  language.py  math_reasoner.py  prediction.py  rehearsal.py  retrieval.py
planning/: goal_planner.py  planner.py  policies.py
runtime/: core.py  events.py  loop.py  scheduler.py  supervisor.py  transition.py  triggers.py
self_model/: drift.py
src/: subjective_runtime_v2_1
state/: models.py  sqlite_store.py  store.py
tension/: rules.py
tests/: test_action_gate.py  test_api_prefix_static_ui.py  test_approval_execution.py  test_approval_flow.py  test_approval_routes.py  test_associative_module.py  test_atomic_cycle_commit.py  test_atomic_cycle_transition.py  test_attention.py  test_cognitive_mode_engine.py  test_compact_state_regression.py  test_compact_state_regulation.py  test_concurrent_inputs.py  test_conflict_engine.py  test_consequence_engine.py  test_continuity_engine.py  test_discrepancy_module.py  test_dynamic_attention.py  test_event_persistence.py  test_file_tool_hardening.py  test_homeostasis_engine.py  test_hypothesis_engine.py  test_idle_consolidation.py  test_interpretive_bias.py  test_llm_planner_validation.py  test_manual_cycle_removed.py  test_memory_system.py  test_narrative_engine.py  (+28 more)
(+70 files in other folders)
