[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subjective_runtime_v2_1"
version = "0.1.0"
description = "Scaffold for a functional testbed of integrated, temporally extended, self-affecting cognition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn>=0.30",
  "ollama>=0.3.0",
]
optional-dependencies.dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
